--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
           </div>
         </div>
       </div>
-      <div class="time"></div>
+      <div class="time">
+        <canvas  id="c1" width="270" height="100"></canvas>
+        <canvas  id="c2" width="270" height="100"></canvas>
+      </div>
       <div class="date"></div>
     </div>
 
